# keiba-3

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  Makefile  README.md  SPECIFICATION.md  VERCEL_DEPLOY.md  VERCEL_DEPLOY_STEP_BY_STEP.md  docker-compose.prod.yml  docker-compose.yml  package.json  vercel.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  render.yaml  run_worker.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  api.py  health.py  scraping.py
backend/app/api/endpoints/: __init__.py  prediction.py  training.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/ml/: __init__.py
backend/app/ml/features/: __init__.py  feature_config.py  feature_extractor.py
backend/app/ml/models/: __init__.py  base_model.py  race_predictor.py
backend/app/ml/prediction/: __init__.py  predictor_service.py
backend/app/ml/training/: __init__.py  data_loader.py  trainer.py
backend/app/models/: __init__.py  race.py
backend/app/parser/: __init__.py  data_parser.py  race_data_converter.py
backend/app/schemas/: __init__.py  prediction.py  race.py  scraping.py
backend/app/scraper/: __init__.py  base.py  race_list_scraper.py  race_scraper.py
backend/app/services/: __init__.py  scraping_service.py
backend/app/tasks/: __init__.py  celery_app.py  scraping_tasks.py  training_tasks.py
backend/database/migrations/: env.py
frontend/: .vercelignore  Dockerfile  README.md  jsconfig.json  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
nginx/: nginx.prod.conf
(+24 files in other folders)
